Revision history for Dist-Zilla-Plugin-DynamicPrereqs

{{$NEXT}}

0.023     2016-04-21 10:44:21Z
          - really fix all remaining tests that require newer MakeMaker
            behaviour

0.022     2016-04-18 21:08:47Z
          - fix test that was written assuming older MakeMaker behaviour

0.021     2016-03-16 20:50:11Z (TRIAL RELEASE)
          - optimize use of blank lines in modified Makefile.PL content

0.020     2016-03-16 02:42:30Z (TRIAL RELEASE)
          - perform Makefile.PL content modification at the proper time (as a
            FileMunger, rather than InstallTool)

0.019     2016-01-20 04:43:24Z
          - perl prerequisite lowered to 5.8 (Graham Ollis)

0.018     2015-12-02 03:40:03Z
          - added options '-body', '-body_from_file' as aliases for '-raw',
            '-raw_from_file'
          - *_requires subs now warn if adding a prereq that might conflict
            with one that already exists (prereq merging not yet supported)

0.017     2015-09-27 07:13:45Z
          - fix new test failure on MSWin32

0.016     2015-09-07 00:12:19Z
          - added new helper subs: requires, runtime_requires,
            build_requires, and test_requires, as sugar for updating prereqs
            in Makefile.PL
          - the -include_sub option is no longer needed: -raw clauses are also
            now searched for sub names.

0.015     2015-08-21 23:49:23Z
          - has_module($module) now returns the $VERSION of the installed
            module, or undef otherwise, if a second argument is not passed

0.014     2015-07-22 02:41:49Z
          - new '-condition' option, as sugar to provide expressions to be
            inserted into Makefile.PL (definitions of referenced subroutines
            are automatically included)

0.013     2015-05-30 19:16:03Z
          - require a new enough Module::CoreList in tests to ensure is_core()
            is available

0.012     2015-05-25 00:47:09Z
          - fix test failure with PadWalker on older perls
