@@ -1,0 +1,2 @@
+package Inlined::Dependency;
+1;
