@@ -1,0 +1,4 @@
+package Inlined::Module;
+our $VERSION = '1.24';
+use Inlined::Dependency;
+1;
